Remove __pycache__ from .gitignore and add patterns for pyc files

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,4 @@
 # Byte-compiled / optimized / DLL files
-__pycache__/
 *.py[cod]
 *$py.class
 
@@ -79,3 +78,5 @@ logs/
 # OS
 Thumbs.db
 .DS_Store
+**/__pycache__/**
+**/*.pyc
